1999-12-21  Laurent Pautet  <pautet@inf.enst.fr>

	* xe_back.adb: Do not allow nultiple definitions of application
	main subprogram. Fix part of 7221-002.

1999-12-01  Laurent Pautet  <pautet@inf.enst.fr>

	* xe.adb, xe.ads: Revisit configuration node structure. Revisit
 	the way literals and array components are handled. Declare new
 	attribute Self_Location that allows to define the locations to use
 	to contact a partition. Accept two notations for attribute
 	Self_Location (overloading). Define two new predefined types. A
 	record type composed of two string components Protocol_Name and
 	Protocol_Data to specify a location like (<protocol_name>,
 	<protocol_data>). An array type of Location to specify several
 	locations. Add a new pragma Boot_Location which is supposed to
 	replace Boot_Server which is not really meaningful and not
 	consistent with Self_Location attribute. Accept two notations for
 	this pragma (same as attribute Self_Location). Define a context
 	type to preserve and restore the parsing context before resolving
 	overloaded pragmas and attributes.

	* xe_back.adb, xe_backs.ads: New procedure Add_Location to add a
 	new location <protocol_name>://<protocol_data> to a partition. New
 	function Get_Location to get the first location assigned to a
 	partition. The locations of a partition are linked and the first
 	location is the root of this list. Define a new type LID_Type for
 	Location Index and add a first and last location id in a partition
 	record to store the location list. Define a location record and a
 	location table. Handle attribute Self_Location and pragma
 	Boot_Location. Define a boot location list with
 	Def_Boot_Location_First and Def_Boot_Location_First.

	* xe_parse.adb, xe_parse.ads: Fix a typo. Improve
 	P_Aggregate_Assignment to parse an array of records. Handle
 	overloading of pragmas and attributes. Improve the way we deal
 	with unconstrained arrays. Warn user that the configuration body