@@ -36,5 +36,6 @@ package XE_Defs is
    function Get_GARLIC_Dir return String_Access;
 
    function Get_Rsh_Command return String;
+   function Get_Rsh_Options return String;
 
 end XE_Defs;
